--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
    FILES
    BoundingBox.msg
-   BoundingBoxes2D.msg
+   SegmentImage.msg
 )
 
 ## Generate services in the 'srv' folder
